@@ -1,3 +1,9 @@
+2009-07-10  Jeffrey Stedfast  <fejj@novell.com>
+
+	* textbox.cpp: Always set SelectionStart before
+	SelectionLength. Fixes a bug when selecting backwards from the end
+	of the buffer.
+
 2009-07-10  Jackson Harper  <jackson@ximian.com>
 
 	* xaml.cpp: Don't auto add the default namespaces for
